src/main/webapp/css/header.css
.header {
    border: 1px silver solid;
    background: #EEEEEE;
    display: inline-block;
    width: 100%;
}

a.button {
	text-decoration: none;
    font: normal 15px verdana;
	color: white;
}

.button {
  border: 1px white solid;
  margin: 5px;
  cursor: pointer;
	float: left;     
	-webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  background-color: #CCCCCC;
  font-weight: bold;
	font-size: 16px;
	color: #ffffff;
	padding: 4px 20px 7px 20px;
	background: -moz-linear-gradient(
		top,
		#999999 0%,
		#666666);
	background: -webkit-gradient(
		linear, left top, left bottom, 
		from(#999999),
		to(#666666));
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border: 1px solid #949494;
	-moz-box-shadow:
		0px 1px 3px rgba(000,000,000,0.25),
		inset 0px 0px 2px rgba(255,255,255,0.7);
	-webkit-box-shadow:
		0px 1px 3px rgba(000,000,000,0.25),
		inset 0px 0px 2px rgba(255,255,255,0.7);
	text-shadow:
		0px 1px 0px rgba(255,255,255,0),
		0px -1px 0px rgba(0,0,0,0.2);
}


.button:hover{
  background-color: #666;
	background: -moz-linear-gradient(
		top,
		#666 0%,
		#333);
	background: -webkit-gradient(
		linear, left top, left bottom, 
		from(#666),
		to(#333));
}

.button:active, .button.active{
  background-color: #999;
	background: -moz-linear-gradient(
		top,
		#666 0%,
		#999);
	background: -webkit-gradient(
		linear, left top, left bottom, 
		from(#666),
		to(#999));
}

.listButton {
    border: 1px white solid;
    height: 32px;
    cursor: pointer;
    list-style-type: none;
}

ul.nav{
    display: none;
    position:relative;
    z-index: 8;
    margin: 0;
    padding: 0;
    padding-top: 0px;
    list-style-type: none;
background-color: #DDDDDD;
}

.textOnButton {
    font: normal 15px verdana;
	color: white;
}

.user-home {
    position: absolute;	
	font: normal 11px verdana;
    right: 10px;
	top: 15px;	
}

.version {
    position: absolute;	
	font: normal 11px verdana;
    right: 10px;
    top: 30px;
}	

div#chart {
    background-color: #DDDDDD;
}

.projectPicker {
  font-family: Verdana;
  font-size: 12px;
  margin: 5px 5px 5px 5px;    
  
 }

td.dragHandle {
	
}

td.showDragHandle {
	background-image: url(images/updown.png);
	background-repeat: no-repeat;
	background-position: center center;
	cursor: move;
} 

#graph_dropdown{
  position: absolute;
  left: 562px;
  top:67px;
  z-index: 10000;
  background-color: #999;
  border: 1px solid #fff;
  display: block;
	-moz-box-shadow:
		0px 1px 3px rgba(000,000,000,0.5),
		inset 0px 0px 2px rgba(255,255,255,0.7);
	-webkit-box-shadow:
		0px 1px 3px rgba(000,000,000,0.5),
		inset 0px 0px 2px rgba(255,255,255,0.7);
	text-shadow:
		1px 1px 1px rgba(0,0,0,0.8)
  	0px -1px 0px rgba(255,255,255,0.2);
  display: none;
  	-webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
}

#graph_dropdown a{
  clear: both;
  display: block;
  padding: 7px;
  font: 16px Arial;
  color: #fff;
  cursor: pointer;
	-webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
}

#graph_dropdown a:hover{
  background-color: #666;
}

#graph_dropdown img{
  width: 25px;
  height: 25px;
  vertical-align: middle;
}

table.pet {
	border-collapse: collapse;
}

table.pet td,th {
	border: solid 1px #999999;
	padding: 2px 5px 2px 5px;
	
}

table.nolines td {
	border: none;
	padding: 0px;
}

.main {
	font: normal 11px verdana;
}

.mustHaveOk {
	background-color: khaki;
}
.mustHaveOverWorst {
	background-color: #ff2222;
}
.mustHaveOverAverage {
	background-color: #ff2222;
}
.niceHaveOk {
	background-color: white;
}
.niceHaveOver {
	background-color: lightgrey;
}
td.niceHaveOver {
	text-decoration: line-through;
}
td.mustHaveOverAverage {
	text-decoration: line-through;
}

body.welcome {
	 margin-left: auto; 
	 margin-right: auto; 
	 width: 800px;
	 margin-top: 50px;
	 margin-bottom: auto;
	 border: #cccccc solid thin;
	 padding: 10px 10px 10px 10px;
}

.main h1 {
	font-size: 20px;
	font-weight: bold;
}
.main h2 {
	font-size: 17px;
	font-weight: bold;
}
.main h3 {
	font-size: 15px;
	font-weight: bold;
}

